removed wix framework dependency from hive-api-scala